--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
 Flask==2.3.3
+Flask-Cors==4.0.0
 idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
